# weixin_monitor

./: .gitignore  README.markdown  config.yaml  pyproject.toml  requirements.txt
src/: main.py
src/config/: config.py
src/core/: ai_analyzer.py  chat_monitor.py  image_processor.py  ocr_processor.py  window_manager.py
src/services/: alert_service.py  analysis_service.py  screenshot_service.py
src/utils/: file_utils.py  logger.py
tests/: test_ai_image_analyzer.py  test_ai_text_analyzer.py  test_ocr.py
